--- a/iletisim.html
+++ b/iletisim.html
@@ -9,26 +9,21 @@
 <body>
     <form action="formveriler.php" method="POST">
     <label for="ad-soyad">Ad Soyad</label>
-    <input type="text" id="ad-soyad" name="ad-soyad" placeholder="Adınızı ve Soyadınızı girin" required><br><br>
-
+    <input type="text" id="ad-soyad" name="ad-soyad" placeholder="Adınızı ve Soyadınızı girin" ><br><br>
     <label for="eposta">E-posta</label>
-    <input type="email" id="eposta" name="eposta" placeholder="E-posta adresinizi girin" required><br><br>
-
+    <input type="email" id="eposta" name="eposta" placeholder="E-posta adresinizi girin" ><br><br>
     <label for="telefon">Telefon</label>
-    <input type="tel" id="telefon" name="telefon" placeholder="Telefon numaranızı girin" required><br><br>
-
-    <label for="sifre">Şifre</label>
-    <input type="password" id="sifre" name="sifre" placeholder="Şifrenizi girin" ><br><br>
+    <input type="tel" id="telefon" name="telefon" placeholder="Telefon numaranızı girin" ><br><br>
     <label for="yas">Yaş</label>
     <input type="number" id="yas" name="yas" placeholder="Yaşınızı girin" min="18" max="100" ><br><br>
     <label for="dogum-tarihi">Doğum Tarihi</label>
-    <input type="date" id="dogum-tarihi" name="dogum-tarihi" required><br><br>
-    <input type="time" id="saat" name="saat" required><br><br>
+    <input type="date" id="dogum-tarihi" name="dogum-tarihi" ><br><br>
+    <input type="time" id="saat" name="saat" ><br><br>
     <label for="cinsiyet">Cinsiyet</label><br>
     <input type="radio" id="erkek" name="cinsiyet" value="erkek">
     <label for="erkek">Erkek</label>
     <input type="radio" id="kadin" name="cinsiyet" value="kadin">
-    <label for="kadin">Kadın</label>
+    <label for="kadin">Kadın</label><br>
     <label for="il">İl Seçin</label>
     <select id="il" name="il" >
         <option value="" disabled selected>Bir il seçin</option>
@@ -115,7 +110,7 @@
     <input type="checkbox" id="yazılım" name="hobiler[]" value="Yazılım">
     <label for="yazılım">Yazılım</label><br>
     <label for="mesaj">Mesaj</label><br>
-    <textarea id="mesaj" name="mesaj" placeholder="Mesajınızı buraya yazın" rows="4" required></textarea><br><br>
+    <textarea id="mesaj" name="mesaj" placeholder="Mesajınızı buraya yazın" rows="4" ></textarea><br><br>
     <input type="submit" value="Gönder"><br>
     <input type="reset" value="Temizle">
 
